[package]
name = "hapax"
version = "0.1.0"
edition = "2021"

[lib]
name = "hapax"
path = "src/lib.rs"

[[bin]]
name = "hapax_cli"
path = "src/hapax_cli.rs"

[dependencies]
regex = "1.7.1"
clap = { version = "4.1.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10.0"
serde_json = "1.0"
rayon = "1.6.1"
log = "0.4.1"
